<package format="2">
    <name>ublox_read</name>
    <version>2.0.0</version>
    <description>
        This package provides a ROS framework for interaction UBLOX ZED-F9P modules
    </description>
    <maintainer email="tpool2@et.byu.edu">Taylor Pool</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>

    <build_depend>message_generation</build_depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>rospy</exec_depend>
</package>